# SS2025_Software_Engineering

./: .pdm-python  README.md  main.py  my_classes.py  my_functions.py  pyproject.toml  simulate_data.py  test.py
